<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/submitworkillusfragment"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            >


            <ImageView
                android:id="@+id/black_image_view"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:src="@color/black"/>

            <ImageView
                android:id="@+id/image_view_image_submit"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="25dp"
                android:src="@drawable/marc_submitwork" />

            <Button
                android:id="@+id/button_edit_image"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/gray"
                android:layout_below="@+id/image_view_image_submit"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="2.5dp"
                android:text="Edit"
                android:textAllCaps="false"
                />

            <Button
                android:id="@+id/button_delete_image"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/gray"
                android:layout_toRightOf="@+id/button_edit_image"
                android:layout_below="@+id/image_view_image_submit"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="2.5dp"
                android:layout_marginRight="5dp"
                android:text="Delete"
                android:textAllCaps="false"
                />




            <com.google.android.material.textfield.TextInputLayout
                android:layout_below="@+id/black_image_view"
                android:id="@+id/layout_text_title_submit_illustration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundColor="@color/colorAccent"
                android:textColorHint="@color/colorPrimary"
                app:counterEnabled="true"
                app:counterMaxLength="32"
                android:hint="Title"
                app:expandedHintEnabled="false"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_title_submit_illustration"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Input title"
                    android:maxLines="1"
                    android:maxLength="32"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_below="@+id/layout_text_title_submit_illustration"
                android:id="@+id/layout_text_description_submit_illustration"
                app:boxBackgroundColor="@color/colorAccent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorPrimary"
                app:counterEnabled="true"
                app:counterMaxLength="3000"
                android:hint="Description"
                app:expandedHintEnabled="false"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_description_title_submit_illustration"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Input description"
                    android:maxLines="1"
                    android:maxLength="3000"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/text_view_privacy_level"
                android:layout_below="@+id/layout_text_description_submit_illustration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Privacy level"
                android:layout_marginLeft="10dp"
                android:textColor="@color/colorPrimary"
                />


            <RadioGroup
                android:id="@+id/group_radio_button_submit_illustrations"
                android:layout_below="@+id/text_view_privacy_level"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="5dp"
                >
                <RadioButton
                    android:id="@+id/radio_button_public_illustrations"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/colorPrimary"
                    android:text="Make public"/>

                <RadioButton
                    android:id="@+id/radio_button_private_illustrations"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/colorPrimary"
                    android:text="Make private"/>

            </RadioGroup>

            <Button
                android:id="@+id/submitIllustrationManga"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:backgroundTint="@color/colorPrimary"
                android:text="submit"
                android:layout_below="@+id/group_radio_button_submit_illustrations"
                android:layout_margin="20dp"/>



        </RelativeLayout>
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar_sumitwork_illustrations"
            android:minHeight="?attr/actionBarSize"
            android:background="@color/colorPrimaryDark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="SubmitWork"
            />

    </RelativeLayout>

</ScrollView>