<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/illustrationlayoutitem">

    <ImageView
        android:id="@+id/image_view_illustrations_recommended"
        android:layout_width="202dp"
        android:layout_height="202dp"
        android:layout_margin="2dp"
        android:src="@drawable/ic_launcher_background"
        android:scaleType="centerCrop"
        />

    <ImageView
        android:id="@+id/image_view_illustrations_recommended_like"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/likeheartwhite"
        android:layout_marginTop="160dp"
        android:layout_marginLeft="160dp"
        android:clickable="true"
        android:focusable="true"
        />




</RelativeLayout>