...

    <group
        android:id="@+id/group2NavDrawer"
        android:checkableBehavior="single">

        <item
            android:id="@+id/submitWork"
            android:title="Submit work"
            android:icon="@drawable/submit_works"/>

        <item
            android:id="@+id/yourWorks"
            android:title="Your works"
...
        <item
            android:id="@+id/myPixiv"
            android:title="My pixiv"
            />

        <item
            android:id="@+id/logout"
            android:title="Log Out"
            />

        <item
            android:id="@+id/changeImg"
            android:title="Change the profile pic"
...
